--- a/index.html
+++ b/index.html
@@ -2,92 +2,129 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Free Culture is a Human Right</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>End Harmful Copyright Censorship</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
-      background: #ffe6d6; /* light orange background */
-      color: #800000;       /* dark red text */
-    }
-
-    header {
-      background-color: #ff9999; /* light red header */
-      color: white;
-      padding: 1em;
+      font-family: Arial, sans-serif;
+      background-color: #fde6d8;
+      color: #4a2c2a;
       text-align: center;
     }
 
-    h1, h2 {
-      margin-top: 0.5em;
-    }
-
-    main {
-      padding: 2em;
-    }
-
-    section {
-      max-width: 800px;
-      margin: 0 auto;
-    }
-
-    button {
-      background-color: #ff6666; /* red button */
+    .header {
+      background-color: #ff9a9a;
+      padding: 20px;
+      font-size: 26px;
+      font-weight: bold;
       color: white;
-      border: none;
-      padding: 0.8em 1.2em;
-      cursor: pointer;
-      font-size: 1em;
-      border-radius: 5px;
     }
 
-    button:hover {
-      background-color: #ff3333; /* darker red on hover */
+    .content {
+      background-color: #fde6d8;
+      padding: 30px 20px;
+      max-width: 700px;
+      margin: auto;
+      text-align: left;
+      line-height: 1.6;
     }
 
-    footer {
-      background-color: #ff9999; /* light red footer */
-      color: white;
+    .content h2 {
       text-align: center;
-      padding: 1em;
-      margin-top: 2em;
+      margin-bottom: 20px;
+    }
+
+    .buttons {
+      text-align: center;
+      margin: 30px 0;
+    }
+
+    .btn {
+      display: inline-block;
+      margin: 10px;
+      padding: 12px 20px;
+      background-color: #ff7f7f;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+    }
+
+    .btn.telegram {
+      background-color: #2aa9e0;
+    }
+
+    .footer {
+      background-color: #ff9a9a;
+      color: white;
+      padding: 15px;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Free Culture is a Human Right</h1>
-  </header>
 
-  <main>
-    <section>
-      <p>
-        Our petition advocates for the <strong>right to free culture</strong>. Everyone should be able 
-        to express themselves, share, and celebrate culture without fear. When people have to 
-        second-guess whether they can film their own cups, books, or TVs in their own homes, 
-        that is not freedom — that is control.
-      </p>
+  <div class="header">
+    Free Culture is a Human Right
+  </div>
 
-      <p>
-        This petition calls for copyright reform and limits on overzealous censorship. 
-        Ordinary people should be able to participate in culture without fear of automated takedowns or strikes.
-      </p>
+  <div class="content">
+    <h2>Why my petition matters</h2>
 
-      <h2>Sign the Petition</h2>
-      <p>
-        Join thousands of others advocating for free culture and creative freedom:
-      </p>
-      <a href="https://www.change.org/end_censorship" target="_blank">
-        <button>Sign the Petition</button>
+    <p>
+      My views are also supported by these activists and thinkers:
+      <strong>Lawrence Lessig, Rick Falkvinge, Cory Doctorow</strong>, and others.
+    </p>
+
+    <p><strong>Reasons I believe copyright needs reform or should end completely:</strong></p>
+
+    <ol>
+      <li>
+        I came to the conclusion that culture can't be owned by one entity.
+        Everything is created through people, not by people — we are one consciousness.
+        Ideas released into the world are free.
+        <br><em>(As argued in the book <strong>Free Culture</strong> by Lawrence Lessig.)</em>
+      </li>
+
+      <li>
+        We should have the right to film and record in our own homes without
+        second-guessing or seeking permission when sharing non-profit culture.
+        Things in our own home should be ours.
+      </li>
+
+      <li>
+        People contribute to culture by sharing. Culture is essential and a
+        fundamental human right practiced for centuries.
+        Sadly, in the digital age, this right is becoming more restricted than ever before.
+      </li>
+
+      <li>
+        There needs to be a balance between the public and original artists —
+        protecting creators without limiting culture itself.
+      </li>
+
+      <li>
+        Limiting culture is impossible. People will keep creating regardless,
+        and culture will always build on the past.
+      </li>
+    </ol>
+
+    <div class="buttons">
+      <a class="btn" href="https://www.change.org/end_censorship" target="_blank">
+        Sign the Petition
       </a>
-    </section>
-  </main>
 
-  <footer>
-    <p>This site is an advocacy project focused on legal reform and free expression.</p>
-    <p>Created by Julie Zimmi, free culture advocate.</p>
-  </footer>
+      <a class="btn telegram" href="https://t.me/freeculturepetition" target="_blank">
+        Join Telegram Group
+      </a>
+    </div>
+  </div>
+
+  <div class="footer">
+    This site is an advocacy project focused on legal reform and free expression.<br>
+    Created by Julie Zimmi, free culture advocate.
+  </div>
+
 </body>
 </html>
