--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="8lnLgV2pGd-diERxvYRxd7AJDKKqZ-od60bvhtC1BkQ" />
   <title>Free Culture is a Human Right</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A petition advocating free culture, copyright reform, and the right to share non-commercial creativity." />
+  <meta name="robots" content="index, follow">
+
   <style>
     body {
       margin: 0;
@@ -63,6 +67,7 @@
     }
   </style>
 </head>
+
 <body>
 
   <div class="header">
