Add canonical URL to index.html
Added canonical link for SEO optimization.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="google-site-verification" content="8lnLgV2pGd-diERxvYRxd7AJDKKqZ-od60bvhtC1BkQ" />
   <title>Free Culture is a Human Right</title>
+
+  <!-- ✅ Canonical URL: the main page Google should index -->
+  <link rel="canonical" href="https://juliezimmi.github.io/copyright-reform-petition/" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A petition advocating free culture, copyright reform, and the right to share non-commercial creativity." />
   <meta name="robots" content="index, follow">
